plugin keycloak cnf OK