@@ -1,14 +1,18 @@
 package fr.ans.prosanteconnect.keycloak.provider.mapper;
 
+import java.io.IOException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.cert.CertificateEncodingException;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import javax.xml.bind.DatatypeConverter;
 
+import org.jboss.logging.Logger;
 import org.keycloak.models.ClientSessionContext;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.ProtocolMapperModel;
@@ -19,17 +23,24 @@ import org.keycloak.protocol.oidc.mappers.OIDCAttributeMapperHelper;
 import org.keycloak.protocol.oidc.mappers.OIDCIDTokenMapper;
 import org.keycloak.provider.ProviderConfigProperty;
 import org.keycloak.representations.IDToken;
+import org.keycloak.util.JsonSerialization;
 
-public class CustomProtocolMapper extends AbstractOIDCProtocolMapper
+import com.fasterxml.jackson.databind.JsonNode;
+
+public class X509ThumbprintProtocolMapper extends AbstractOIDCProtocolMapper
 		implements OIDCAccessTokenMapper, OIDCIDTokenMapper {
 
-	public static final String PROVIDER_ID = "custom-protocol-mapper";
+	private static final Logger LOGGER = Logger.getLogger(X509ThumbprintProtocolMapper.class);
+
+	public static final String PROVIDER_ID = "ANS-X509-protocol-mapper";
+
+	private static final String NODE_NAME = "x5t#S256";
 
 	private static final List<ProviderConfigProperty> configProperties = new ArrayList<>();
 
 	static {
 		OIDCAttributeMapperHelper.addTokenClaimNameConfig(configProperties);
-		OIDCAttributeMapperHelper.addIncludeInTokensConfig(configProperties, CustomProtocolMapper.class);
+		OIDCAttributeMapperHelper.addIncludeInTokensConfig(configProperties, X509ThumbprintProtocolMapper.class);
 	}
 
 	@Override
@@ -39,7 +50,7 @@ public class CustomProtocolMapper extends AbstractOIDCProtocolMapper
 
 	@Override
 	public String getDisplayType() {
-		return "X509 thumbprint client certificate Mapper";
+		return "X509 thumbprint";
 	}
 
 	@Override
@@ -63,22 +74,30 @@ public class CustomProtocolMapper extends AbstractOIDCProtocolMapper
 		X509Certificate[] certs = keycloakSession.getContext().getHttpRequest().getClientCertificateChain();
 		if (certs == null || certs.length == 0) {
 			// No x509 client cert
+			LOGGER.warn("No x509 client certificate found.");
 			return;
 		}
 		try {
-			String thumbprint = computeBase64SHA256Thumbprint(certs[0]);
-			OIDCAttributeMapperHelper.mapClaim(token, mappingModel, thumbprint);
-		} catch (CertificateEncodingException | NoSuchAlgorithmException e) {
-			// TODO Auto-generated catch block
+			String base64Thumbprint = computeBase64SHA256Thumbprint(certs[0]);
+			JsonNode claimValue = formatClaimValue(base64Thumbprint);
+			OIDCAttributeMapperHelper.mapClaim(token, mappingModel, claimValue);
+		} catch (CertificateEncodingException | NoSuchAlgorithmException | IOException e) {
+			LOGGER.errorf("Error while calculating Base64SHA256Thumbprint:", e);
 			e.printStackTrace();
 		}
-
 	}
 
 	public static String computeBase64SHA256Thumbprint(final X509Certificate cert)
 			throws NoSuchAlgorithmException, CertificateEncodingException {
-		byte[] derEncodedCert = cert.getEncoded();
-		MessageDigest sha256 = MessageDigest.getInstance("SHA-256");
-		return java.util.Base64.getEncoder().encodeToString(sha256.digest(derEncodedCert));
+		MessageDigest md = MessageDigest.getInstance("SHA-256");
+		md.update(cert.getEncoded());
+		String thumbprint = DatatypeConverter.printHexBinary(md.digest()).toLowerCase();
+		return java.util.Base64.getEncoder().encodeToString(thumbprint.getBytes());
+	}
+
+	public static JsonNode formatClaimValue(final String data) throws IOException {
+		Map<String, Object> map = new HashMap<>();
+		map.put(NODE_NAME, data);
+		return JsonSerialization.createObjectNode(map);
 	}
 }
